//
// If you need to (re)generate the gRPC code, see prerequisites
// 
// 	https://grpc.io/docs/languages/go/quickstart/
// 
// and then run 
// 
// 	protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative feature.proto
// 
// from this directory.
//

syntax = "proto3";

option go_package = "github.com/mullvad/wg-manager/server/feature";

package feature;

service PostQuantumSecure {
	rpc PskExchange(PskRequest) returns (PskResponse) {}
}

message PskRequest {
	bytes wg_pubkey = 1;
	bytes wg_psk_pubkey = 2;
	OqsPubkey oqs_pubkey = 3;
}

message OqsPubkey {
	string algorithm_name = 1;
	bytes key_data = 2;
}

message PskResponse {
	bytes ciphertext = 1;
}
